--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -26,7 +26,7 @@
             app:contentInsetLeft="0dp"
             app:contentInsetRight="0dp"
             app:contentInsetStart="0dp"
-            app:theme="@style/ToolBarStyle">
+            android:theme="@style/ToolBarStyle">
 
 
             <androidx.cardview.widget.CardView
