--- a/app/src/main/res/layout/fragment_beer_manufacturers.xml
+++ b/app/src/main/res/layout/fragment_beer_manufacturers.xml
@@ -5,6 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:listitem="@layout/fragment_beer_manufacturers_card"
-    tools:context=".BeerManufacturersFragment">
+    tools:context=".home.BeerManufacturersFragment">
 
 </androidx.recyclerview.widget.RecyclerView>
