--- a/app/src/main/res/layout/fragment_search_screen.xml
+++ b/app/src/main/res/layout/fragment_search_screen.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HomeScreenSearchFragment">
+    tools:context=".home.HomeScreenSearchFragment">
 
     <!-- We need  focusableInTouchMode to prevent the initial rendering from scrolling down -->
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -96,4 +96,4 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tablayout" />
     </androidx.constraintlayout.widget.ConstraintLayout>
-</ScrollView>
+</androidx.core.widget.NestedScrollView>
