--- a/app/src/main/res/menu/menu_home_screen.xml
+++ b/app/src/main/res/menu/menu_home_screen.xml
@@ -1,13 +1,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="ch.beerpro.HomeScreenActivity">
+    tools:context="ch.beerpro.home.HomeScreenActivity">
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
-        android:name="@string/action_settings"
+        android:title="@string/action_settings"
         app:showAsAction="never" />
     <item
         android:id="@+id/action_logout"
-        android:name="@string/action_logout" />
+        android:title="@string/action_logout" />
 </menu>
