--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -56,6 +56,7 @@
                         android:layout_marginLeft="8dp"
                         android:layout_toRightOf="@+id/searchImageView"
                         android:background="@android:color/transparent"
+                        android:hint="Bier suchen"
                         android:imeOptions="actionSearch"
                         android:inputType="text" />
 
