--- a/app/src/main/res/layout/fragment_search_screen.xml
+++ b/app/src/main/res/layout/fragment_search_screen.xml
@@ -23,34 +23,34 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardView"
-        android:transitionName="search"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="216dp"
-        android:layout_marginEnd="8dp"
-        app:cardCornerRadius="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageView3">
-
-        <TextView
-            android:id="@+id/beerSearchButton"
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cardView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical|center_horizontal"
-            android:drawableLeft="@drawable/ic_search_black_24dp"
-            android:gravity="center_vertical"
-            android:paddingStart="32dp"
-            android:paddingLeft="32dp"
-            android:paddingTop="8dp"
-            android:paddingEnd="32dp"
-            android:paddingRight="32dp"
-            android:paddingBottom="8dp"
-            android:text="Bier Suchen" />
-    </androidx.cardview.widget.CardView>
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="216dp"
+            android:layout_marginEnd="8dp"
+            android:transitionName="search"
+            app:cardCornerRadius="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/imageView3">
+
+            <TextView
+                android:id="@+id/beerSearchButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical|center_horizontal"
+                android:drawableLeft="@drawable/ic_search_black_24dp"
+                android:gravity="center_vertical"
+                android:paddingStart="8dp"
+                android:paddingLeft="8dp"
+                android:paddingTop="8dp"
+                android:paddingEnd="16dp"
+                android:paddingRight="16dp"
+                android:paddingBottom="8dp"
+                android:text="Bier suchen" />
+        </androidx.cardview.widget.CardView>
 
     <TextView
         android:id="@+id/textView2"
