--- a/app/src/main/res/layout/mybeers_entry.xml
+++ b/app/src/main/res/layout/mybeers_entry.xml
@@ -27,7 +27,7 @@
                 app:layout_constraintStart_toStartOf="parent" />
 
             <TextView
-                android:id="@+id/textView4"
+                android:id="@+id/onTheListSince"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
@@ -48,7 +48,7 @@
                 android:textSize="12sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView4" />
+                app:layout_constraintTop_toBottomOf="@+id/onTheListSince" />
 
             <Button
                 android:id="@+id/removeFromWishlist"
