--- a/app/src/main/res/layout/fragment_explore_beer_categories.xml
+++ b/app/src/main/res/layout/fragment_explore_beer_categories.xml
@@ -4,7 +4,7 @@
     android:id="@+id/recyclerView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:listitem="@layout/fragment_beer_manufacturers_card"
-    tools:context=".presentation.explore.BeerManufacturersFragment">
+    tools:listitem="@layout/fragment_explore_beer_categories_card"
+    tools:context=".presentation.explore.BeerCategoriesFragment">
 
 </androidx.recyclerview.widget.RecyclerView>
