PlacePicker for ratings implemented

--- a/app/src/main/res/layout/activity_details_ratings_listentry.xml
+++ b/app/src/main/res/layout/activity_details_ratings_listentry.xml
@@ -67,6 +67,17 @@
             app:layout_constraintTop_toBottomOf="@+id/authorName" />
 
         <TextView
+            android:id="@+id/location"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Switzerland"
+            android:layout_marginStart="8dp"
+            android:textSize="12sp"
+            app:layout_constraintStart_toEndOf="@+id/avatar"
+            app:layout_constraintTop_toBottomOf="@id/date"/>
+
+
+        <TextView
             android:id="@+id/numLikes"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
